Fixing alignment of busy indicator

--- a/src/style/venue.css
+++ b/src/style/venue.css
@@ -87,4 +87,5 @@
   margin-left: 0.5em;
   text-align: center;
   color: green;
+  font-size: 90%;
 }
